--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -5,7 +5,16 @@
 {% block content %}
 <div class="container mt-5">
     <h1 class="mb-4">Liste Des Utilisateurs</h1>
+    <div class="row">
+      <div class="col-6">
 
+        <form method="GET" action="/users">
+          <input type="text" name="query" placeholder="Search..." class="form-control" >
+          <button type="submit" class="btn btn-primary mt-2 mb-2" id="searchBtn">Search</button>
+        </form>
+      </div>
+
+    </div>  
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
         <tr>
@@ -16,7 +25,7 @@
             <th>Email</th>
             <th>Role</th>
             <th>
-                <button class="btn btn-info w-100">Ajouter</button>
+                <button class="btn btn-info w-100" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#addModal">Ajouter</button>
             </th>
             
         </tr>
@@ -31,10 +40,10 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.role_id }}</td>
                 <td class="d-flex justify-content-evenly">
-                    <button class="btn btn-primary">
+                    <button class="btn btn-primary" onclick="openEditModal({{ user.id }}, '{{ user.login }}', '{{ user.prenom }}', '{{ user.nom }}', '{{ user.email }}', '{{ user.password }}', '{{ user.role_id }}')">
                         Modifer
                     </button>
-                    <button class="btn btn-danger">
+                    <button class="btn btn-danger" onclick="confirmDelete({{ user.id }})">
                         Supprimer
                     </button>
                 </td>
@@ -47,6 +56,70 @@
     
 </div>
 
+<div class="modal fade" id="addModal" tabindex="-1">
+  <div class="modal-dialog">
+    <form id="addForm" class="modal-content" action="/users/create" method="post">
+      <div class="modal-header">
+        <h5 class="modal-title">Add New User</h5>
+      </div>
+      <div class="modal-body">
+        <input name="login" class="form-control mb-2" placeholder="Login" required>
+        <input name="prenom" class="form-control mb-2" placeholder="Prenom">
+        <input name="nom" class="form-control mb-2" placeholder="Nom">
+        <input name="email" class="form-control mb-2" placeholder="Email">
+        <input name="mot_passe" class="form-control mb-2" placeholder="Mot de passe" type="password">
+        <input name="role" class="form-control mb-2" placeholder="Role">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-success">Add</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+<!-- Edit User Modal -->
+<div class="modal fade" id="editUserModal" tabindex="-1">
+  <div class="modal-dialog">
+    <form id="editUserForm" class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit User</h5>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" name="id" id="editUserId">
+        <input name="login" id="editLogin" class="form-control mb-2" placeholder="Login">
+        <input name="prenom" id="editPrenom" class="form-control mb-2" placeholder="Prenom">
+        <input name="nom" id="editNom" class="form-control mb-2" placeholder="Nom">
+        <input name="email" id="editEmail" class="form-control mb-2" placeholder="Email">
+        <input name="mot_passe" id="editPassword" class="form-control mb-2" placeholder="Password">
+        <input name="role" id="editRole" class="form-control mb-2" placeholder="Role">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-primary">Modifier</button>
+      </div>
+    </form>
+  </div>
+</div>
+<!-- Delete confirmation modal -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Deletion</h5>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this user?
+      </div>
+      <div class="modal-footer">
+        <input type="hidden" id="deleteUserId">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" onclick="deleteUser()">Yes, Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
 <nav aria-label="Pagination">
   <ul class="pagination">
     {% if pagination.has_prev %}
@@ -78,3 +151,59 @@
 </nav>
 
 {% endblock %}
+{% block scripts %}
+<script>
+  function confirmDelete(userId) {
+    $('#deleteUserId').val(userId);
+    var modal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'));
+    modal.show();
+  }
+
+  function deleteUser() {
+    const userId = $('#deleteUserId').val();
+    $.ajax({
+      url: '/users/delete/' + userId,
+      type: 'DELETE',
+      success: function () {
+        $('#confirmDeleteModal').modal('hide');
+        location.reload()
+
+      }
+    });
+  }
+ // Edit User 
+ function openEditModal(id, login, prenom, nom, email, password, role) {
+  $('#editUserId').val(id);
+  $('#editLogin').val(login);
+  $('#editPrenom').val(prenom);
+  $('#editNom').val(nom);
+  $('#editEmail').val(email);
+  $('#editPassword').val("");
+  $('#editRole').val(role);
+  const modal = new bootstrap.Modal(document.getElementById('editUserModal'));
+  modal.show();
+}
+
+$('#editUserForm').on('submit', function (e) {
+  e.preventDefault();
+  const userId = $('#editUserId').val();
+  const formData = $(this).serialize();
+
+  $.ajax({
+    url: '/users/edit/' + userId,
+    type: 'POST',
+    data: formData,
+    success: function (response) {
+      $('#editUserModal').modal('hide');
+      location.reload()
+    },
+    error: function () {
+      alert('Failed to update user.');
+    }
+  });
+});
+  
+</script>
+{% endblock %}
+
+
